feature: Добавил получение новостей по фильтрам
